# nerdminer-rpi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
include/nerdminer/: miner_job.h  miner_session.h  nerdminer_block.h  stratum_client.h  version.h
include/nerdminer/network/: connection.h
src/: main.cpp  miner_job.cpp  miner_session.cpp  nerdminer_block.cpp
src/network/: connection.cpp
src/stratum/: stratum_client.cpp
tests/: CMakeLists.txt  test_main.cpp
